--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "client-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/ippsystm/demo-itkam.git",
+  "homepage": "https://ippsystm.github.io/demo-itkam",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
